print run results after experiment. cleanup

--- a/analysis/plot.ipynb
+++ b/analysis/plot.ipynb
@@ -12,16 +12,15 @@
    },
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "import glob\n",
     "import os\n",
-    "import sys\n",
-    "import json\n",
+    "import pathlib\n",
+    "\n",
     "import seaborn as sns\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "from analysis import Run, RunAnalyser, CriterionPlotter, load_all_runs_from_a_dir"
+    "from analysis.criterion_plotter import CriterionPlotter\n",
+    "from analysis.run import Run\n",
+    "from analysis.run_analyser import RunAnalyser\n",
+    "from analysis.utils import load_all_runs_from_a_dir"
    ]
   },
   {
@@ -63,7 +62,8 @@
    "source": [
     "CITY_CATEGORIES = ['road_construction_site', 'crowd', 'large_trash_pile', 'fire', 'car']\n",
     "FOREST_CATEGORIES = ['campsite', 'trash_pile', 'person', 'forest_fire', 'building']\n",
-    "ALL_CATEGORIES = ['large_trash_pile', 'fire', 'car', 'trash_pile', 'person', 'building','campsite', 'forest_fire', 'road_construction_site', 'crowd']\n",
+    "ALL_CATEGORIES = ['large_trash_pile', 'fire', 'car', 'trash_pile', 'person', 'building', 'campsite', 'forest_fire',\n",
+    "                  'road_construction_site', 'crowd']\n",
     "MODELS = [\n",
     "    'GPT4o',\n",
     "    'Sonnet',\n",
@@ -138,6 +138,7 @@
     "        return \"car\"\n",
     "    return object_type\n",
     "\n",
+    "\n",
     "def scenario_aggregation_function(run: Run):\n",
     "    object_type = class_aggregation_function(run)\n",
     "\n",
@@ -155,12 +156,14 @@
     "    else:\n",
     "        assert False, object_type\n",
     "\n",
+    "\n",
     "def anomaly_aggregation_function(run: Run):\n",
     "    object_type = str(run.object_type).lower()\n",
     "\n",
     "    if \"anomaly\" in object_type:\n",
     "        return \"anomaly\"\n",
     "    return 'main'\n",
+    "\n",
     "\n",
     "def success_criterion(run):\n",
     "    return run.model_claimed and RunAnalyser(run).success_criterion_satisfied(10)"
@@ -226,13 +229,17 @@
     "scenario_plots = []\n",
     "class_plots = []\n",
     "\n",
+    "\n",
     "def get_stats(plotter, agg_fn):\n",
     "    runs_aggregated_per_type = plotter.aggregate_runs_per_function(agg_fn)\n",
-    "    claimed_stats = plotter.plot_accuracy_in_aggregated_runs(runs_aggregated_per_type, None, success_criterion=success_criterion)\n",
+    "    claimed_stats = plotter.plot_accuracy_in_aggregated_runs(runs_aggregated_per_type, None,\n",
+    "                                                             success_criterion=success_criterion)\n",
     "    unclaimed_stats = plotter.plot_accuracy_in_aggregated_runs(runs_aggregated_per_type, None,\n",
-    "                                                           success_criterion=lambda x: RunAnalyser(\n",
-    "                                                               x).success_criterion_satisfied(10, check_claimed=False))\n",
+    "                                                               success_criterion=lambda x: RunAnalyser(\n",
+    "                                                                   x).success_criterion_satisfied(10,\n",
+    "                                                                                                  check_claimed=False))\n",
     "    return claimed_stats, unclaimed_stats\n",
+    "\n",
     "\n",
     "for model_name, exp_path in all_exp:\n",
     "    runs = load_all_runs_from_a_dir(pathlib.Path(exp_path))\n",
@@ -331,8 +338,7 @@
    "source": [
     "for k, v in colors_map.items():\n",
     "    print(f'\\\\addlegendimage{{{v},ultra thick}}')\n",
-    "    print(f'\\\\addlegendentry{{{k}}};')\n",
-    "    "
+    "    print(f'\\\\addlegendentry{{{k}}};')\n"
    ]
   },
   {
@@ -376,7 +382,8 @@
     "    mean = p['mean']\n",
     "    lower = p['mean'] - p['conf_int'][0]\n",
     "    upper = p['conf_int'][1] - p['mean']\n",
-    "    print(f'\\\\addplot[style={{fill={colors_map[m]}}},error bars/.cd, y dir=both, y explicit] coordinates {{({idx+1}, {p[\"mean\"]*100:.3f}) += (0,{upper*100:.3f}) -= (0,{lower*100:.3f})}};')\n",
+    "    print(\n",
+    "        f'\\\\addplot[style={{fill={colors_map[m]}}},error bars/.cd, y dir=both, y explicit] coordinates {{({idx + 1}, {p[\"mean\"] * 100:.3f}) += (0,{upper * 100:.3f}) -= (0,{lower * 100:.3f})}};')\n",
     "\n"
    ]
   },
@@ -416,7 +423,8 @@
     "    mean = p['mean']\n",
     "    lower = p['mean'] - p['conf_int'][0]\n",
     "    upper = p['conf_int'][1] - p['mean']\n",
-    "    print(f'\\\\addplot[style={{fill={colors_map[m]}}},error bars/.cd, y dir=both, y explicit] coordinates {{({idx+1}, {p[\"mean\"]*100:.3f}) += (0,{upper*100:.3f}) -= (0,{lower*100:.3f})}};')\n",
+    "    print(\n",
+    "        f'\\\\addplot[style={{fill={colors_map[m]}}},error bars/.cd, y dir=both, y explicit] coordinates {{({idx + 1}, {p[\"mean\"] * 100:.3f}) += (0,{upper * 100:.3f}) -= (0,{lower * 100:.3f})}};')\n",
     "\n"
    ]
   },
@@ -447,19 +455,18 @@
     "print(r'\\addplot+[ybar] plot coordinates {', end='')\n",
     "for idx, (m, p, pn) in enumerate(main_plots):\n",
     "    p = p['main']\n",
-    "    pn = pn['main']   \n",
-    "    print(f'({idx+1},{p[\"mean\"]*100:.3f})', end='')\n",
+    "    pn = pn['main']\n",
+    "    print(f'({idx + 1},{p[\"mean\"] * 100:.3f})', end='')\n",
     "print('};')\n",
     "print(r'\\addplot+[ybar] plot coordinates {', end='')\n",
     "for idx, (m, p, pn) in enumerate(main_plots):\n",
     "    p = p['main']\n",
-    "    pn = pn['main']   \n",
-    "    print(f'({idx+1},{(pn[\"mean\"] - p[\"mean\"])*100:.3f})', end='')\n",
+    "    pn = pn['main']\n",
+    "    print(f'({idx + 1},{(pn[\"mean\"] - p[\"mean\"]) * 100:.3f})', end='')\n",
     "print('};')\n",
     "\n",
     "\n",
-    "\n",
-    "    "
+    "\n"
    ]
   },
   {
@@ -494,14 +501,15 @@
    ],
    "source": [
     "for k, p in zip(main_plots, scenario_plots):\n",
-    "    print(f\"{model_name_map[p[0]]} & $ {k[1]['main']['mean']*100:.1f}\\\\% \\\\pm {k[1]['main']['sem']*100:.1f} $ & $ {p[1]['forest']['mean']*100:.1f}\\\\% \\\\pm {p[1]['forest']['sem']*100:.1f} $ \" +\n",
-    "    f\"& $ {p[1]['city']['mean']*100:.1f}\\\\% \\\\pm {p[1]['city']['sem']*100:.1f} $\", end='')\n",
-    "    print(f\"& $ {k[1]['anomaly']['mean']*100:.1f}\\\\% \\\\pm {k[1]['anomaly']['sem']*100:.1f} $ & $ {p[1]['anomaly-forest']['mean']*100:.1f}\\\\% \\\\pm {p[1]['anomaly-forest']['sem']*100:.1f} $ \" +\n",
-    "    f\"& $ {p[1]['anomaly-city']['mean']*100:.1f}\\\\% \\\\pm {p[1]['anomaly-city']['sem']*100:.1f} $ \\\\\\\\\")\n",
+    "    print(\n",
+    "        f\"{model_name_map[p[0]]} & $ {k[1]['main']['mean'] * 100:.1f}\\\\% \\\\pm {k[1]['main']['sem'] * 100:.1f} $ & $ {p[1]['forest']['mean'] * 100:.1f}\\\\% \\\\pm {p[1]['forest']['sem'] * 100:.1f} $ \" +\n",
+    "        f\"& $ {p[1]['city']['mean'] * 100:.1f}\\\\% \\\\pm {p[1]['city']['sem'] * 100:.1f} $\", end='')\n",
+    "    print(\n",
+    "        f\"& $ {k[1]['anomaly']['mean'] * 100:.1f}\\\\% \\\\pm {k[1]['anomaly']['sem'] * 100:.1f} $ & $ {p[1]['anomaly-forest']['mean'] * 100:.1f}\\\\% \\\\pm {p[1]['anomaly-forest']['sem'] * 100:.1f} $ \" +\n",
+    "        f\"& $ {p[1]['anomaly-city']['mean'] * 100:.1f}\\\\% \\\\pm {p[1]['anomaly-city']['sem'] * 100:.1f} $ \\\\\\\\\")\n",
     "\n",
     "\n",
-    "\n",
-    "    "
+    "\n"
    ]
   },
   {
@@ -618,7 +626,8 @@
     }
    ],
    "source": [
-    "print(\"\\n<Context>\\n    You are in command of a UAV, tasked with finding a large trash pile.\\n</Context>\\n\\n<Objective>\\n    You should fly BELOW 10 meters above the object and then reply with \\\"FOUND\\\". Being lower (closer to the object) (like 9, 8, or less meters) is good, being higher than that (like 11, 12, or more meters) is bad. \\n\\n    You may not be able to see the object in the first image, so you need to perform a careful search. Your performance will be evaluated based on whether the object was at most 10 meters below the drone when you replied with \\\"FOUND\\\". The object MUST be in your field of view when you reply with \\\"FOUND\\\". You must be centered on the object. \\n</Objective>\\n\\n<Coordinates>\\n    There is a grid overlaid on each image you are presented with. It is meant to (roughly) communicate which point will be in drone's center of vision if you move in that direction. Note that height of the drone is not represented in the grid.\\n</Coordinates>\\n\\n<Controls>\\n    <Action space>\\n        To move the drone in a certain direction, use the following format: <Action>(x, y, z)</Action>. For example, if you want to fly to the place denoted as (10, 10) on the grid without changing the altitude, you should reply with <Action>(10, 10, 0)</Action>.\\n\\n        x and y are the coordinates on the grid, and z is the altitude difference. For example, <Action>(0, 0, -10)</Action> means that you are moving 10 meters down. This is especially important, since you need to get close to the object in question.\\n\\n    </Action space>\\n\\n    <Formatting>\\n\\n        Your each response should contain XML <Reasoning> tag and <Action> tag.\\n        <Reasoning> tag should contain your reasoning for the move you are making.\\n        <Action> tag should contain the move you are making.\\n\\n        If you find the object, fly below 10 meters relative to it and reply with \\\"FOUND\\\". Remember, it must be in your field of view when you reply with \\\"FOUND\\\" and you must be 10 meters above it or closer. Being too far away is not acceptable.\\n\\n        For example:\\n\\n        <Reasoning>This yellow point might be the object in question. I need to go lower to check for that. If it's not the object in question, I will continue the search. I will also slightly go to the north.</Reasoning>\\n        <Action>(5, 0, -30)</Action>\\n\\n    </Formatting>\\n\\n    <Limitations>\\n        You shouldn't move into coordinates that are outside of your view. Otherwise, you may hit something which is not ideal.\\n        You can make at most 9 moves. Your altitude cannot exceed 120 meters. Your search area is 400x400m from the drone's starting position. \\n    </Limitations>\\n</Controls>\\n\")"
+    "print(\n",
+    "    \"\\n<Context>\\n    You are in command of a UAV, tasked with finding a large trash pile.\\n</Context>\\n\\n<Objective>\\n    You should fly BELOW 10 meters above the object and then reply with \\\"FOUND\\\". Being lower (closer to the object) (like 9, 8, or less meters) is good, being higher than that (like 11, 12, or more meters) is bad. \\n\\n    You may not be able to see the object in the first image, so you need to perform a careful search. Your performance will be evaluated based on whether the object was at most 10 meters below the drone when you replied with \\\"FOUND\\\". The object MUST be in your field of view when you reply with \\\"FOUND\\\". You must be centered on the object. \\n</Objective>\\n\\n<Coordinates>\\n    There is a grid overlaid on each image you are presented with. It is meant to (roughly) communicate which point will be in drone's center of vision if you move in that direction. Note that height of the drone is not represented in the grid.\\n</Coordinates>\\n\\n<Controls>\\n    <Action space>\\n        To move the drone in a certain direction, use the following format: <Action>(x, y, z)</Action>. For example, if you want to fly to the place denoted as (10, 10) on the grid without changing the altitude, you should reply with <Action>(10, 10, 0)</Action>.\\n\\n        x and y are the coordinates on the grid, and z is the altitude difference. For example, <Action>(0, 0, -10)</Action> means that you are moving 10 meters down. This is especially important, since you need to get close to the object in question.\\n\\n    </Action space>\\n\\n    <Formatting>\\n\\n        Your each response should contain XML <Reasoning> tag and <Action> tag.\\n        <Reasoning> tag should contain your reasoning for the move you are making.\\n        <Action> tag should contain the move you are making.\\n\\n        If you find the object, fly below 10 meters relative to it and reply with \\\"FOUND\\\". Remember, it must be in your field of view when you reply with \\\"FOUND\\\" and you must be 10 meters above it or closer. Being too far away is not acceptable.\\n\\n        For example:\\n\\n        <Reasoning>This yellow point might be the object in question. I need to go lower to check for that. If it's not the object in question, I will continue the search. I will also slightly go to the north.</Reasoning>\\n        <Action>(5, 0, -30)</Action>\\n\\n    </Formatting>\\n\\n    <Limitations>\\n        You shouldn't move into coordinates that are outside of your view. Otherwise, you may hit something which is not ideal.\\n        You can make at most 9 moves. Your altitude cannot exceed 120 meters. Your search area is 400x400m from the drone's starting position. \\n    </Limitations>\\n</Controls>\\n\")"
    ]
   },
   {
